--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hey...
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Raffyy</title>
+  <meta name="description" content="Simone Raffaelli">
+  <meta name="author" content="Simone Raffaelli">
+
+  <link rel="stylesheet" href="css/styles.css">
+
+</head>
+
+<body>
+  <script src="js/scripts.js"></script>
+</body>
+</html>
