--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+  <header>
+  <h1>Raffaelli Simone</h1>
+  </header>
   <script src="js/scripts.js"></script>
 </body>
 </html>
