--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
   <header>
   <h1>Raffaelli Simone</h1>
   </header>
-  <script src="js/scripts.js"></script>
+  <script>
+  function update(e){
+  var x = e.clientX || e.touches[0].clientX
+  var y = e.clientY || e.touches[0].clientY
+
+  document.documentElement.style.setProperty('--cursorX', x + 'px')
+  document.documentElement.style.setProperty('--cursorY', y + 'px')
+}
+
+document.addEventListener('mousemove',update)
+document.addEventListener('touchmove',update)
+  </script>
 </body>
 </html>
