--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <div class="counter"></div>
+  <div class="hey">Second you lost in yìthis page...</div>
   <script>
   var counter = document.querySelector('.counter'),
     map = { M: 1000, CM: 900, D: 500, CD: 400, C: 100, XC: 90, L: 50, XL: 40, X: 10, IX: 9, V: 5, IV: 4, I: 1 },
@@ -23,7 +24,7 @@
             counter.innerHTML = roman(c)
             c++
             loop()
-        }, 380)
+        }, 1000)
     }
 
 setTimeout(loop, 1400)
