--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@ function roman(num) {
     }
   }
   return roman;
+}		  
+		  
+function classToggle() {
+    document.body.classList.toggle('newbg');
 }
+counter.addEventListener('click', classToggle);
   </script>
 </body>
 </html>
