--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Raffyy</title>
   <meta name="description" content="Simone Raffaelli">
   <meta name="author" content="Simone Raffaelli">
+	<!-- Chrome, Firefox OS and Opera -->
+<meta name="theme-color" content="#000000">
 
   <link rel="stylesheet" href="css/styles.css">
 
